api/deployment/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: echochat-api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: leandervboven/echochat:api
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          livenessProbe:
            httpGet:
                path: /healthz
                port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
                path: /healthz
                port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
      imagePullSecrets:
        - name: leanderdockerhub
