api/deployment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: echochat-api
  labels:
    app: api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: api
